--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p class="muted">말차처럼 가벼운 할 일, 오늘에 집중하는 생산성</p>
 
   <h2>문의</h2>
-  <p>이메일: <a href="mailto:support@example.com?subject=ToDoDaily%20지원%20문의">rsj1001@gmail.com</a></p>
+  <p>이메일: <a href="rsj1001@gmail.com?subject=ToDoDaily%20지원%20문의">rsj1001@gmail.com</a></p>
 
   <h2>앱 소개</h2>
   <ul>
