--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
   <p>앱 내 설정에서 데이터를 내보낼 수 있으며, 앱 삭제 시 기기에 저장된 모든 데이터는 제거됩니다.</p>
 
   <h2>5. 문의</h2>
-  <p>이메일: <a href="mailto:support@example.com?subject=ToDoDaily%20지원%20문의">support@example.com</a></p>
+  <p>이메일: <a href="mailto:rsj1001@gmail.com?subject=ToDoDaily%20지원%20문의">rsj1001@gmail.com</a></p>
 
   <hr />
   <p class="muted">© 2025 YourName. All rights reserved.</p>
