--- a/privacy.html
+++ b/privacy.html
@@ -30,6 +30,6 @@
   <p>이메일: <a href="mailto:rsj1001@gmail.com?subject=ToDoDaily%20지원%20문의">rsj1001@gmail.com</a></p>
 
   <hr />
-  <p class="muted">© 2025 YourName. All rights reserved.</p>
+  <p class="muted">© 2025 Dongha Ryu. All rights reserved.</p>
 </body>
 </html>
