--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
   <p><a href="./privacy.html">개인정보 처리방침 보기</a></p>
 
   <hr />
-  <p class="muted">© 2025 YourName. All rights reserved.</p>
+  <p class="muted">© 2025 Dongha Ryu. All rights reserved.</p>
 </body>
 </html>
